@@ -1,7 +1,15 @@
 # Progetto-C22
 Progetto studenti (gruppo GoF)
 
-
 ![logo_small](https://user-images.githubusercontent.com/97592246/155824498-0deea996-3510-463d-917f-9dc0049a640e.png)
 
+## Setup DataBase
+Eseguire su MySQL Workbench il file ```./src/it/unipv/po/oocinema/persistenza/create_schema.sql```
 
+## Setup Eclipse
+Nelle Run Configuration del progetto è necessario inserire:
+```
+--module-path "path\to\javafx\lib" 
+--add-modules javafx.controls,javafx.fxml
+--add-modules javafx.controls,javafx.media
+```
